tests/src/frontend/typechecking/invalid/assign_dot5.sk
class Foo(x: Int)

fun bar(): void {
  f = Foo(2);
  f.!x = 1
}
